
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_4__ ;
typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef scalar_t__ uint8_t ;
typedef size_t int8_t ;
struct TYPE_7__ {scalar_t__ bInterfaceNumber; scalar_t__ bAlternateSetting; } ;
typedef TYPE_2__ USBH_InterfaceDescTypeDef ;
struct TYPE_9__ {TYPE_2__* Itf_Desc; } ;
struct TYPE_6__ {TYPE_4__ CfgDesc; } ;
struct TYPE_8__ {TYPE_1__ device; } ;
typedef TYPE_3__ USBH_HandleTypeDef ;
typedef TYPE_4__ USBH_CfgDescTypeDef ;


 size_t USBH_MAX_NUM_INTERFACES ;

uint8_t USBH_FindInterfaceIndex(USBH_HandleTypeDef *phost, uint8_t interface_number, uint8_t alt_settings)
{
  USBH_InterfaceDescTypeDef *pif ;
  USBH_CfgDescTypeDef *pcfg ;
  int8_t if_ix = 0;

  pif = (USBH_InterfaceDescTypeDef *)0;
  pcfg = &phost->device.CfgDesc;

  while (if_ix < USBH_MAX_NUM_INTERFACES)
  {
    pif = &pcfg->Itf_Desc[if_ix];
    if((pif->bInterfaceNumber == interface_number) && (pif->bAlternateSetting == alt_settings))
    {
      return if_ix;
    }
    if_ix++;
  }
  return 0xFF;
}
